fixed overlay overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,12 +243,17 @@ h4{
     top: -30px;
     right: 15px;
 }
+
 #portfolio .box{
     position: relative;
+    
+    /* margin-bottom: 10px; */
 }
 
 #portfolio .box .img_div{
     /* padding: 10px; */
+    width: 100%;
+    height: 100%;
     overflow: hidden;
     /* border: 2px solid red; */
     
@@ -256,34 +261,29 @@ h4{
 
 #portfolio .box .img_div img{
     width: 100%;
-    transform: scale(1.07, 1.07);
+    height: 100%;
+    /* transform: scale(1.07, 1.07); */
     transition: all .25s ease;
 }
 
 #portfolio .box a{
     text-decoration: none;
     color: #fff;
-}
-
-#portfolio .box .overlay{
-    opacity: 0;
-    width: 0;
-    height: 0;
-    top: 0;
-    left: 0;
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.377);
-    transition: all .5s ease;
-}
-
-#portfolio .box:hover .overlay{
-    opacity: 1;
-    width: 100%;
+    overflow: hidden;
+    /* display: block; */
     height: 100%;
 }
 
-#portfolio .box:hover img{
-    transform: scale(1.0, 1.0);
+#portfolio .box .overlay{
+    opacity: 1;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.377);
+    transition: all .5s ease;
 }
 
 #portfolio .box .overlay h3{
@@ -292,7 +292,6 @@ h4{
     left: 50%;
     transform: translate(-50%, -50%);
 }
-
 
 
 
@@ -372,7 +371,29 @@ h4{
         text-align: left;
     }
 
+    #portfolio .box .img_div img{
+        width: 100%;
+        transform: scale(1.07, 1.07);
+        transition: all .25s ease;
+    }
 
+    #portfolio .box .overlay{
+        opacity: 0;
+        width: 0;
+        height: 0;
+        transition: all .5s ease;
+    }
+
+    #portfolio a:hover .overlay{
+        opacity: 1;
+        width: 100%;
+        height: 100%;
+    }
+    
+    
+    #portfolio a:hover img{
+        transform: scale(1.0, 1.0);
+    }
 
 }
 
